--- a/canary-app-automatic/rollout.yaml
+++ b/canary-app-automatic/rollout.yaml
@@ -29,11 +29,11 @@ spec:
           weightedTraefikServiceName: traefik-service 
       steps:
       - setWeight: 30
-      - pause: {duration: 2m}
+      - pause: {duration: 10s}
       - setWeight: 60
-      - pause: {duration: 2m}
+      - pause: {duration: 10s}
       - setWeight: 100
-      - pause: {duration: 2m}    
+      - pause: {duration: 10s}    
       analysis:
         templates:
         - templateName: simple-200-return
